--- a/JavaScripts/JS_in_Browser/INDEX/index.html
+++ b/JavaScripts/JS_in_Browser/INDEX/index.html
@@ -4,10 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JavaScript</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
 
 </head>
+<!-- <script>
+    console.log(document.body);
+</script> -->
 
 <body>
 
@@ -20,16 +23,34 @@
     <script src="script2.js"></script> -->
     <!-- <script>
         console.log("Methos 2")
-    </script> -->
-
-
+    </script> --
     <h1>Heyy everyone Today is learnt Basics of Java script </h1>
-    
+
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos voluptate sapiente, voluptatem odio optio, molestias
         vero deserunt velit illum quibusdam perferendis ducimus numquam consequuntur ipsa aspernatur harum tenetur natus
         hic.</p>
 
-    <!-- <script src="http://127.0.0.1:5500/JavaScripts/JS_in_Browser/index.html" theme="blue" defer></script> -->
+     <script src="http://127.0.0.1:5500/JavaScripts/JS_in_Browser/index.html" theme="blue" defer></script> -->
+
+    body tag and html tag are sibling together
+
+    <div>
+        this div is child of body tag
+        <p>thi is paragraph and it is child of div tag </p>
+        <p>this is 2nd paragaph , and both p1 and p2 are sibling anf it is child of div tag </p>
+        <span>
+            child of div tag
+            <p>
+                child of span tag and grandchild of div tag
+            </p>
+        </span>
+    </div>
+    <div>
+        this is div 
+    </div>
+
+
+
 </body>
 
 </html>
