--- a/JavaScripts/JS_in_Browser/Parents_Sibling/parent.html
+++ b/JavaScripts/JS_in_Browser/Parents_Sibling/parent.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parent_Siblings</title>
     <link rel="stylesheet" href="parent.css">
 </head>
+
 <body>
     <script src="parent.js"></script>
     <div>
@@ -16,6 +18,13 @@
                 this is grandchild div
             </div>
         </div>
+
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque perspiciatis aspernatur sed modi expedita
+            consectetur odit explicabo, ducimus corporis. Ab accusantium tempora facilis excepturi non aspernatur
+            consectetur quo perferendis deleniti!
+        </p>
     </div>
 </body>
+
 </html>
