learned Events in javascript

--- a/JavaScripts/eventsInJS/eventTypes.html
+++ b/JavaScripts/eventsInJS/eventTypes.html
@@ -87,6 +87,10 @@
             alert('i love this way of writing a function');
         })
         
+        // fourthWay.addEventListener('click', () => {
+        //     console.log('i love this way of writing a function');
+        // })
+
 
     </script>
 
